--- a/Characterizing_Passive_Properties.ipynb
+++ b/Characterizing_Passive_Properties.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "(None, <matplotlib.axes._subplots.AxesSubplot at 0x7f30ffba5dd0>)"
+       "(None, <matplotlib.axes._subplots.AxesSubplot at 0x7f3476c8ecd0>)"
       ]
      },
      "execution_count": 2,
